# zenote_backend

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  helper_functions.md
migrations/: 0001_graphs_table.sql  20240220054741_create_initial_tables.sql
src/: db.rs  main.rs  utils.rs
src/db/: mod.rs  organization.rs
src/db/tests/: common.rs  mod.rs  organization.rs
src/errors/: mod.rs
src/handlers/: edge_handlers.rs  graph_handlers.rs  health_handlers.rs  mod.rs  node_handlers.rs  permission_handlers.rs  user_handlers.rs
src/handlers/tests/: common.rs  edge_handler_tests.rs  graph_handler_tests.rs  mod.rs  node_handler_tests.rs  user_handler_tests.rs
src/handlers/utils/: edge_utils.rs  graph_utils.rs  mod.rs  node_utils.rs  user_utils.rs
src/models/: block.rs  common.rs  edge.rs  graph.rs  mod.rs  node.rs  organization.rs  organizations.rs  permissions.rs  user.rs
src/routes/: edge_routes.rs  graph_routes.rs  health_routes.rs  mod.rs  node_routes.rs  organization.rs  user_routes.rs
src/schemas/: block_schema.rs  edge_schema.rs  graph_schema.rs  node_schema.rs  user_schema.rs
src/services/: organization.rs
src/tests/: tests.rs
