[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
env_logger = "0.11.1"
hyper = "1.1.0"
json = "0.12.4"
jsonwebtoken = "9.2.0"
log = "0.4.20"
openidconnect = "3.5.0"
postgres = "0.19.7"
reqwest = "0.11.24"
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
sqlx = { version = "0.7", features = ["postgres",  "uuid", "time", "runtime-tokio-rustls", "macros", "migrate"] }
sqlx-core = "0.7.3"
time = {version= "0.3.34", features = ["serde"] }
tokio ={ version="1.36.0", features = ["full"] }
tower ={ version="0.4.13", features=["timeout"]}
tower-http = {version="0.5.2", features=["cors"]}
uuid = {version="1.7.0", features = ["v4", "serde", "std"] }
